fixed out of bounds value with select component

--- a/src/components/Web3Status/index.module.css
+++ b/src/components/Web3Status/index.module.css
@@ -1,7 +1,7 @@
 .buttonRoot {
   border-radius: 4px;
   width: 80%;
-  margin: 0 10%;
+  margin: 5px 10%;
 }
 
 .backdrop {
